update for new theme system updates

--- a/src/level0-romfs/ROM/HTMLs/AccessNumber.html
+++ b/src/level0-romfs/ROM/HTMLs/AccessNumber.html
@@ -1,6 +1,6 @@
-<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
-<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
-head(th,'Dialing access number')</script><table cellspacing=0 cellpadding=0>
+<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert nosave nosend>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>
+head('Dialing access number')</script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
 <spacer height=40 type=vertical>
 <td abswidth=20>
@@ -16,4 +16,4 @@ head(th,'Dialing access number')</script><table cellspacing=0 cellpadding=0>
 <table width=480>
 <tr><td colspan=4 height=4 valign=top align=left><hr>
 <tr><td height=20 valign=top align=left>
-<tr><td colspan=4 valign=top align=right><script>butt(th,'Done','Done',103)</script></form>
+<tr><td colspan=4 valign=top align=right><script>butt('Done','Done',103)</script></form>
