--- a/src/level0-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/level0-romfs/ROM/HTMLs/BuildInfo.html
@@ -1,7 +1,7 @@
-<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert nosave nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
-<script src=file://rom/JS/BuildInfo.js></script></head><script>th=pp()
-head(th,'About This HackTV Build','','FridayEvilArr',-1)</script>
+<script src=file://rom/JS/BuildInfo.js></script></head><script>
+head('About This HackTV Build','','FridayEvilArr',-1)</script>
 <table cellspacing=0 cellpadding=0><tr><td abswidth=10>&nbsp;<td colspan=3>
 <tr><td width=20><td valign=top align=right width=120><shadow>Client ROM:</shadow>
 <td width=10><td valign=top>Version &wtv-appvers;-<script>d.write(bI('version'));</script>
@@ -21,4 +21,4 @@ Brought to you by the efforts of:<br>
 - <b>SKCro</b> (themes, design, optimization)<br>
 - <b><a href="javascript:gsa('<style>b{color:#0080ff}</style>Join the WebTV/MSNTV Discord!<br><br><b>https://zef.pw/wtvdiscord</b>',rom+'Images/discord.gif','Ugh fine, I\'ll type it','','No thanks')">WebTV Discord</a></b> (for the lulz)<br>
 <tr><td height=4></table><hr>
-<table><tr><td width=600 align=right><form action=javascript:goHTV()><script>butt(th,'Done','',120,'','font=proportional selected')</script></form></font>
+<table><tr><td width=590 align=right><form action=javascript:goHTV()><script>butt('Done','',120,'','font=proportional selected')</script></form></font>
