--- a/src/level0-romfs/ROM/HTMLs/ConfigureBYOISP.html
+++ b/src/level0-romfs/ROM/HTMLs/ConfigureBYOISP.html
@@ -1,6 +1,6 @@
-<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
-<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
-head(th,'Use your own ISP','','snowy1')</script><table cellspacing=0 cellpadding=0>
+<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert nosave nosend>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>
+head('Use your own ISP','','snowy1')</script><table cellspacing=0 cellpadding=0>
 <tr><td colspan=4><spacer height=30 type=vertical>
 <tr><td abswidth=34><td width=220 height=166 valign=top align=left><table cellspacing=0 cellpadding=0>
 <tr><td absheight=45 valign=top><font size=-1>Check this box and fill in the blanks to use your own Internet service provider.
@@ -21,4 +21,4 @@ head(th,'Use your own ISP','','snowy1')</script><table cellspacing=0 cellpadding
 <tr><td absheight=38 valign=top colspan=3><table><tr><td valign=top align=left><input type=text name=BYOISPAccessNumber bgcolor=444444 text=ffdd33 cursor=cc9933 size=18 maxlength=18 numbers value=&banum;></table>
 <tr><td absheight=38 valign=top colspan=3><table><tr><td valign=top align=left><input type=text name=BYOISPAccessNumber2 bgcolor=444444 text=ffdd33 cursor=cc9933 size=18 maxlength=18 numbers value=&banm2;></table>
 </table><tr><td><td colspan=4 height=47 valign=top align=left>
-<tr><td colspan=4 valign=top align=right><script>butt(th,'Done','Done',103);</script></form>
+<tr><td colspan=4 valign=top align=right><script>butt('Done','Done',103);</script></form>
