--- a/src/level0-romfs/ROM/HTMLs/ErrorInBYOISP.html
+++ b/src/level0-romfs/ROM/HTMLs/ErrorInBYOISP.html
@@ -1,39 +1,26 @@
-<html>
-<head>
-<display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
-</head>
-<script>
-th = pp();
-head(th, 'Error Setting ISP Options');
-</script>
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert nosave nosend>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head>
+<script>head('Error Setting ISP Options');</script>
 <table cellspacing=0 cellpadding=0>
-<tr>
-<td abswidth=34>
-<td colspan=3>
+<tr><td abswidth=34><td colspan=3>
 <table cellspacing=0 cellpadding=0>
-<tr>
-<td valign=center absheight=40>
+<tr><td valign=center absheight=40>
 </table>
-<td abswidth=20>
-<TR>
-<td>
+<td abswidth=20><tr><td>
 <td WIDTH=420 HEIGHT=225 VALIGN=top ALIGN=left>
 <table cellspacing=0 cellpadding=0>
-<tr>
-<td valign=top>
+<tr><td valign=top>
 <p>You have to supply at least one access phone number for your ISP.
 <p>You might have to consult the documentation from your ISP or 
-contact customer support for your ISP to obatin an access phone number.
-<p> 
+contact customer support for your ISP to obatin an access phone number.<p> 
 </table>
 <form action="client:GoBack">
-<TR>
+<tr>
 <td>
-<TD COLSPAN=3 VALIGN=top ALIGN=right>
-<INPUT TYPE=SUBMIT Value=Back NAME="Back" WIDTH=103>
-</SHADOW></FONT></FORM>
-<TD>
-</TABLE>
-</BODY>
-</HTML>
+<td colspan=3 valign=top align=right>
+<script>butt('Back','Back',103)</script>
+</shadow></font></form>
+<td>
+</table>
+</body>
+</html>
