--- a/src/level0-romfs/ROM/HTMLs/SecretPhoneSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/SecretPhoneSetup.html
@@ -1,6 +1,6 @@
-<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert nosave nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
-head(th,'Obscure dialing options','','AliveAtDawn')
+head('Obscure dialing options','','AliveAtDawn')
 </script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
 <table cellspacing=0 cellpadding=0><tr><td valign=center absheight=40></table>
@@ -32,4 +32,4 @@ head(th,'Obscure dialing options','','AliveAtDawn')
 </table></table>
 <tr><td absheight=40>
 <tr><td>
-<td colspan=3 valign=top align=right><hr><script>butt(th,'Connect','Connect',150);butt(th,'Back','Back',150,'','onclick=goHTV()')</script></form></table>
+<td colspan=3 valign=top align=right><hr><script>butt('Connect','Connect',150);butt('Back','Back',150,'','onclick=goHTV()')</script></form></table>
