updates for new theme system updates

--- a/src/tmp-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
@@ -1,6 +1,6 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
-head(th,'Advanced dialing options')</script><table cellspacing=0 cellpadding=0>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>
+head('Advanced dialing options')</script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
 <spacer height=40 type=vertical>
 <td abswidth=20>
@@ -41,4 +41,4 @@ head(th,'Advanced dialing options')</script><table cellspacing=0 cellpadding=0>
 <tr><td>
 <tr><td><td colspan=4 height=4 valign=top align=left>
 <tr><td><td colspan=3 valign=top align=right>
-<script>butt(th,'Done','Done',103);</script></form></table>
+<script>butt('Done','Done',103);</script></form></table>
