--- a/src/tmp-romfs/ROM/HTMLs/PhoneCallWaitThresh.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneCallWaitThresh.html
@@ -1,6 +1,6 @@
-<html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
-head(th,'Call waiting sensitivity')
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert nosave nosend>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>
+head('Call waiting sensitivity')
 </script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
 <table cellspacing=0 cellpadding=0>
@@ -31,4 +31,4 @@ head(th,'Call waiting sensitivity')
 <tr><td><td colspan=4 height=1 valign=top align=left>
 <tr><td>
 <tr><td>
-</table><table width=450><tr><td valign=top align=right><hr><script>butt(th,'Done','Done',110)</script></form></table>
+</table><table width=450><tr><td valign=top align=right><hr><script>butt('Done','Done',110)</script></form></table>
