--- a/src/tmp-romfs/ROM/HTMLs/PhoneSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneSetup.html
@@ -1,7 +1,6 @@
-<html><head><display nooptions noscroll allowoffline noreconnectalert>
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert nosave nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>
-th=pp()
-head(th,'Dialing options')
+head('Dialing options')
 </script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=14><td colspan=3>
 <spacer height=60 type=vertical>
@@ -26,4 +25,4 @@ head(th,'Dialing options')
 <tr><td><td colspan=4 height=1 valign=top align=left>
 <tr><td>
 <tr><td><td colspan=4 height=4 valign=top align=left>
-<tr><td><td colspan=3 valign=top align=right><script>butt(th,'Done','Done',103)</script></form>
+<tr><td><td colspan=3 valign=top align=right><script>butt('Done','Done',103)</script></form>
