--- a/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneSetupIntro.html
@@ -1,7 +1,9 @@
-<html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script><script>redir()</script></head><script>th=pp()
-head(th,'Phone & Dialing Settings','large','Ghosttown')
-</script><table cellspacing=0 cellpadding=0>
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert nosave nosend>
+<script src=file://rom/Cache/h.js></script>
+<script src=file://rom/Cache/n.js></script>
+<script>redir()</script></head>
+<script>head('Phone & Dialing Options','large','Ghosttown')</script>
+<table cellspacing=0 cellpadding=0>
 <tr><td abswidth=14><td colspan=3><td abswidth=20 height=1>
 <tr><td><td colspan=3 height=70 valign=middle align=left>You might need to adjust these dialing options in order to connect to WebTV.
 <tr><td><td width=198 height=195 valign=top align=left>
@@ -27,4 +29,4 @@ head(th,'Phone & Dialing Settings','large','Ghosttown')
 <tr><td><td colspan=4><hr>
 <tr><td><td colspan=2 height=4 valign=top align=left>
 <tr><td><td colspan=2 height=1 valign=top align=left><font size=-1><i>Choose</i> Done <i>to return to HTV.</i></font>
-<td valign=top align=right><form action=javascript:goHTV()><script>butt(th,'Done','Done',103);d.write(nbsp(3))</script></form></table>
+<td valign=top align=right><form action=javascript:goHTV()><script>butt('Done','Done',103);d.write(nbsp(3))</script></form></table>
