updates for new theme system updates

--- a/src/tmp-romfs/ROM/HTMLs/HackTV.html
+++ b/src/tmp-romfs/ROM/HTMLs/HackTV.html
@@ -1,7 +1,7 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
-bgm=gBGM(z_nv)
-head(th,'Welcome to HackTV','',bgm,-1)
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>
+bgm=gV(1)
+head('Welcome to HackTV','',z_bgm[bgm],-1,1)
 function doMenu(){d.ua.vu.value=d.ua.um[d.ua.um.selectedIndex].value}
 function setMsg(msg){d.msg.box.value=msg}
 function urlInfo(){setMsg('                            This is a URL accessor. Will allow you to explore this build, and when connected, allow access to wtv- urls.')}
@@ -18,15 +18,15 @@ window.onload = doMenu;
 <li><a href=Themes.html onmouseover="setMsg('                            Customize the look of the HackTV build. There are several styles to choose from.')">Theme Settings</a>
 <li><a href=BGM.html onmouseover="setMsg('                            Choose from several available background music for the HackTV Homepage.')">BGM Settings</a>
 <li><a href=TechInfoInternal.html onmouseover="setMsg('                            This page allows you to view technical information about your box. Identify the build version, ssid, and other relevant information.')">Tech Info</a>
-<li><a href=HTMLv2.html onmouseover="setMsg('                            This page allows you to play with the HTML and Javascript features of this build by offering a sandbox to play in.')">HTML Sandbox v2</a>
+<li><a href=HTMLv2.html onblur=urlInfo() onmouseover="setMsg('                            This page allows you to play with the HTML and Javascript features of this build by offering a sandbox to play in.')">HTML Sandbox v2</a>
 <tr><td><spacer width=2 height=120 type=block></td></tr>
 </table></td>
 <spacer height=9 type=block><td valign=top>
 <table><td valign=top>
 <center><spacer width=2 height=2 type=block>
-<form name=msg><script>ta(th,11,29,'box',1,'','nohighlight noselect')</script></form>
-</table>&nbsp;<script>as(th,'',10,256,0,1)</script>
-<table><tr><td><form name=ua><select name=um onchange=doMenu() width=272 onmouseover=urlInfo()>
+<form name=msg><script>ta(11,29,'box',1,'','nohighlight noselect')</script></form>
+</table>&nbsp;<script>as('',10,256,0,1)</script>
+<table><tr><td><form name=ua><select name=um onchange=doMenu() width=272 onblur=urlInfo()>
 <option value=file://rom/HTMLs/BuildInfo.html selected>file://rom/HTMLs/BuildInfo.html</option>
 <option value=file://rom/Cache/Music/index.html>file://rom/Cache/Music/index.html</option>
 <option value=file://rom/Cache/Audio/index.html>file://rom/Cache/Audio/index.html</option>
@@ -35,6 +35,6 @@ window.onload = doMenu;
 <option value=client:>client:</option>
 <option value=wtv->wtv-</option>
 </select>
-<script>d.write('<input type=text name=vu value="" border=1 bgcolor='+gTC(th,'bg')+' text='+gTC(th,'t')+' cursor='+gTC(th,'t')+' align=center width=214 executeurl asciionly autoactivate onmouseover="urlInfo()">')</script>
-<spacer type=block width=2><script>butt(th,'Go','',56,'','onmouseover=urlInfo()')</script>
+<script>d.write('<input type=text name=vu value="" border=1 bgcolor='+gTC('bg')+' text='+gTC('t')+' cursor='+gTC('t')+' align=center width=214 executeurl asciionly autoactivate onblur="urlInfo()">')</script>
+<spacer type=block width=2><script>butt('Go','',56,'','onblur=urlInfo()')</script>
 </form></table></td></tr>
