--- a/src/level0-romfs/ROM/HTMLs/HackTV.html
+++ b/src/level0-romfs/ROM/HTMLs/HackTV.html
@@ -12,7 +12,7 @@ window.onload = doMenu;
 <br> &nbsp; <br>
 <font size=2 color=989898>
 <li><a href=javascript:dial() onmouseover="setMsg('                            In the event that you already have a Tellyscript for the server you want to connect to, select this to connect to the web now.')">Quick Connect</a>
-<li><a href=client:unpluggedandmoved" onmouseover="setMsg('                            In the event that you would like to forcefully dial toll free without using connect setup (equiv to clicking Moved in the dialog we removed)')">Quick Connect</a>
+<li><a href=client:unpluggedandmoved" onmouseover="setMsg('                            In the event that you would like to forcefully dial toll free without using Connect Setup (equiv to clicking Moved in the dialog we removed)')">Unplugged/Moved</a>
 <li><a href=client:gotoconnectsetup onmouseover="setMsg('                            This page provides you with the option to choose from a list of servers that you would like to connect to.')">Connect Setup</a>
 <li><a href=client:gotophonesetup onmouseover="setMsg('                            To connect to the internet, it may be necessary to modify some dialing options.')">Phone Settings</a>
 <li><a href=SecretPhoneSetup.html  onmouseover="setMsg('                            This page allows you to set more advanced phone options, such as the 1800 number.')">Obsecure Settings</a>
