--- a/src/tmp-romfs/ROM/HTMLs/ConnectSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/ConnectSetup.html
@@ -21,8 +21,8 @@ window.onload=uS;
 <table width=100% cellspacing=1 cellpadding=0>
 <tr><td height=18>
 <tr><td><input name=serviceType type=hidden value=custom>
-&nbsp;Address:&nbsp;&nbsp;&nbsp;<input size=21 asciionly name=machine value="" bgcolor=b5b5b5 text=191919 cursor=6d32a8>
-&nbsp;&nbsp;&nbsp;Port:<input size=5 asciionly numbers name=port value="" bgcolor=b5b5b5 text=191919 cursor=6d32a8>
+&nbsp;Address:&nbsp;&nbsp;&nbsp;<input size=21 asciionly name=machine value="" bgcolor=191919 text=c6c6c6 cursor=cc9933>
+&nbsp;&nbsp;&nbsp;Port:<input size=5 asciionly numbers name=port value="" bgcolor=191919 text=c6c6c6 cursor=cc9933>
 </table>
 <spacer type=block height=42><hr><br>
 <table cellspacing=1 cellpadding=0>
@@ -36,4 +36,3 @@ window.onload=uS;
 <form action=javascript:goHTV()><font size=-2><script>butt('HackTV Home','',170);</script></font></form>		
 <form action=client:gotophonesetup><font size=-2><script>butt( 'Dialing Options', '', 170);</script></font></form>
 </table>
-
